...
        sendRequest(elementArray, store)
    }
    Box(
        modifier = Modifier
            .fillMaxSize()
            .background(Color(0xFFA9E1BB))
            .testTag("DiscoverBox")
    ) {
        // Tinder-like swiping was implemented by importing https://github.com/alexstyl/compose-tinder-card and following its tutorial
        Box {
            val states = elementArray.reversed()
                .map { it to rememberSwipeableCardState() }

...
