...
    val sharedPreferences = context.getSharedPreferences("preferences", Context.MODE_PRIVATE)

    Box(
        modifier = Modifier
            .fillMaxSize()
            .background(Color(0xFFA9E1BB))
            .testTag("PreferenceBox")
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .padding(16.dp)
                .align(Alignment.TopCenter)
...
                    val items = listOf("1km", "5km ", "10km", "25km", "50km")
                    var expanded by remember { mutableStateOf(false) }
                    var selectedItem by rememberSaveable { mutableStateOf(items[distanceIndex]) }

                    ExposedDropdownMenuBox(
                        modifier = Modifier
                            .testTag("LocationExposedDropDownMenuBox")
                            .weight(1f)
                            .offset((-4).dp)
                            .padding(end = 40.dp),

                        expanded = expanded,
                        onExpandedChange = {
...


                            ),

                            )
                        ExposedDropdownMenu(
                            modifier = Modifier.testTag("LocationExposedDropDownMenu"),
                            expanded = expanded,
                            onDismissRequest = {
                                expanded = false
                            }
                        ) {
                            items.forEachIndexed {index, selectionOption ->
...
                    val items = listOf("Everything", "Vegetarian", "Vegan")
                    var expanded by remember { mutableStateOf(false) }
                    var selectedItem by remember { mutableStateOf(items[foodChoiceIndex]) }

                    ExposedDropdownMenuBox(
                        modifier = Modifier
                            .testTag("EatingHabitsExposedDropDownMenuBox")
                            .weight(1f)
                            .offset((-4).dp)
                            .padding(end = 30.dp),

                        expanded = expanded,
                        onExpandedChange = {
...
                            colors = ExposedDropdownMenuDefaults.textFieldColors(
                                backgroundColor = Color(0xFFA9E1BB)

                            )
                        )
                        ExposedDropdownMenu(
                            modifier = Modifier.testTag("EatingHabitsExposedDropDownMenu"),

                            expanded = expanded,
                            onDismissRequest = {
                                expanded = false
                            }
                        ) {
...
                }
                IconButton(
                    onClick = { dialogShowing.value = true},
                    modifier = Modifier
                        .align(Alignment.BottomCenter)
                        .padding(bottom = 16.dp)
                        .testTag("AddKeywords")
                ) {
                    Icon(
                        imageVector = Icons.Default.Add,
                        contentDescription = null,
                        modifier = Modifier
                            .align(Alignment.Center)
...

@Composable
fun MyDialog( onDismiss :(value:String) -> Unit){
    val keyword = remember {
        mutableStateOf("")
    }
    Dialog(onDismissRequest = {onDismiss("") }) {
        Column(
            modifier = Modifier
                .testTag("Dialog")
                .fillMaxWidth()
                .background(Color.White),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            TextField(modifier = Modifier.testTag("KeywordInput"), value = keyword.value, onValueChange = {keyword.value = it })
            Row(
                modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceEvenly
            ) {
                Button(onClick = { onDismiss("")}) {
                    Text(text = "Cancel")
                }
                Button(modifier = Modifier.testTag("SaveKeywordButton"), onClick = { onDismiss(keyword.value) }) {
                    Text(text = "Save")
                }
            }
        }
    }
}
...
